Fixed most of the PMD errors